Bug 68135 - Missing man pages for parec and parecord
Summary: Missing man pages for parec and parecord
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: build-system (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-15 07:15 UTC by Tanu Kaskinen
Modified: 2015-05-27 23:32 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
drop separate paplay man page (7.18 KB, patch)
2014-11-17 10:41 UTC, Peter Meerwald
Details | Splinter Review
install man page symlinks for paplay, parec, pamon, parecord (1.16 KB, patch)
2014-11-17 10:42 UTC, Peter Meerwald
Details | Splinter Review
state purpose of pacat when invoked with -h (2.62 KB, patch)
2014-11-17 10:42 UTC, Peter Meerwald
Details | Splinter Review

Description Tanu Kaskinen 2013-08-15 07:15:18 UTC
My Ubuntu installation has man pages for parec and parecord (symlinks to the pacat man page). I don't know how Ubuntu accomplishes that, because it seems that those symlinks aren't installed when installing PulseAudio from source.

> ls /usr/local/man/man1
esdcompat.1  pactl.1   pasuspender.1   start-pulseaudio-kde.1
pacat.1      padsp.1   pax11publish.1  start-pulseaudio-x11.1
pacmd.1      paplay.1  pulseaudio.1
Comment 1 Daniel Schmitz 2013-10-24 09:50:37 UTC
That one affects me too.
I'm on archlinux, pulseaudio is 4.0.
There are no manpages for parecord, parec or paplay.
If you do "paplay --help", it doesn't tell you it's purpose, like "this program plays files through pulseaudio".

I wannted to know if I could use it as a drop-in replacement for aplay.
I want to pipe audio to it like " ... | | paplay -p --format=s16le". But it doesn't say how to specify which file to play or how to specify stdin as source.
Of course I tried the "-" at the end. But that doesn't work either.
I'm writing this here, because I think that stuff belongs into a manpage or "--help"-text.
Comment 2 Daniel Schmitz 2013-10-24 09:55:06 UTC
Ahw, sorry, typo: there should be only 1 pipe and the -p isn't necessary I guess.
So I want to do " ... | paplay --format=s16le"
Comment 3 Tanu Kaskinen 2013-10-28 16:08:10 UTC
Daniel, you can use "pacat" if you want to pipe stuff via stdin. paplay doesn't seem to support that.
Comment 4 Peter Meerwald 2014-11-17 10:41:47 UTC
Created attachment 109610 [details] [review]
drop separate paplay man page
Comment 5 Peter Meerwald 2014-11-17 10:42:18 UTC
Created attachment 109611 [details] [review]
install man page symlinks for paplay, parec, pamon, parecord
Comment 6 Peter Meerwald 2014-11-17 10:42:43 UTC
Created attachment 109612 [details] [review]
state purpose of pacat when invoked with -h
Comment 7 Peter Meerwald 2014-11-17 10:46:40 UTC
patches try to resolve issues raised in bug:
1. there is no man page for parec, pamon, parecord
2. pacat/paplay/parec/paman/parecord -h does not state the purpose
3. remove redundant paplay.1 man page

The different between parec/pamon and parecord is that the --raw flag is true or false, resp. Similar for pacat and paplay. This is not very obvious, hence is now stated when calling these tools with -h.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.